Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     margin: 0px auto;
     color: #222;
     background-color: #edeec9;
+    justify-content: center;
 }
 
 .bottomBanner
@@ -15,13 +16,13 @@
     margin: 0px auto;
     color: #222;
     background-color: #edeec9;
-
+    justify-content: center;
 }
 
 .introText{
     display: flex;
     flex-direction: column;
-    padding: 30px 0px;
+    padding: 10vh 0px;
 }
 
 .container{
